--- a/source/views/createpassword.ejs
+++ b/source/views/createpassword.ejs
@@ -13,7 +13,8 @@
 <body> 
 
 <h1>Welcome To M.R.S. Password Generator</h1> 
-  
+<p> Created and tested by Steven Lei, Maribeth Bondoc Estimos and Richard (Xian)Zhang </p> 
+<p> Copyright 1978-2022. All Rights Reserved.</p>
 
 </body> 
 		
