--- a/source/views/createpassword.ejs
+++ b/source/views/createpassword.ejs
@@ -13,8 +13,27 @@
 <body> 
 
 <h1>Welcome To M.R.S. Password Generator</h1> 
-<p> Created and tested by Steven Lei, Maribeth Bondoc Estimos and Richard (Xian)Zhang </p> 
-<p> Copyright 1978-2022. All Rights Reserved.</p>
+<p> Created and tested by Steven Lei, Maribeth Bondoc Estimos and Richard (Xian)Zhang </p>
+<p> Copyright 1978-2022. All Rights Reserved.</p> 
+
+<br>
+
+<div> 
+
+<form action="" method="POST"> 
+	<div class ="form-group1"> 
+	<table style="width:100%" >
+	<tr>
+		<td colspan=2>
+			 <label for="minLen">Min Length of Password </label> <br><br>
+			 <input name="minLen" value=<%=result.configuration.minLen%> size="8" required></input>
+		</td>
+		<td colspan=2>
+			<label for="maxLen">Max Length of Password</label> <br><br>
+			<input name="maxLen" value = <%=result.configuration.maxLen%> size="8" required> </input>
+		</td>
+	</tr>
+</div>
 
 </body> 
 		
