--- a/source/public/assets/css/styles.css
+++ b/source/public/assets/css/styles.css
@@ -20,5 +20,8 @@ td{
 	font-size:10%;text-align:center;color:black;
 }
 label{
-	padding: 3px;;text-align:center;background-color:pink;color:white;
+	text-siztext-align:center;background-color:pink;color:white;
+}
+footer {
+   position: fixed;left: 0;bottom: 0;width: 100%;background-color: white;color: black;text-align: center;font-size:5%;
 }
