--- a/source/views/createpassword.ejs
+++ b/source/views/createpassword.ejs
@@ -11,7 +11,8 @@
 </head> 
 
 <body> 
-<img src="password.jpg" style="width:128px;height:128px;">
+
+<img src="/source/password.jpg" style="width:128px;height:128px;">
 <h1>Welcome To M.R.S. Password Generator</h1> 
 <p>Use our online password generator to instantly create a secure, random password.</p>
 
@@ -41,7 +42,7 @@
 			<input type="checkbox" name="withUpperAlphabit" <%=result.configuration.withUpperAlphabit?"checked":""%> > With Upper Alphabit </input>
 		</td>
 		<td>
-			<input type="checkbox" name="withLowerAlphabit" <%=result.configuration.withLowerAlphabit?"checked":""%>> With Lower AlphaBit </input>
+			<input type="checkbox" name="withLowerAlphabit" <%=result.configuration.withLowerAlphabit?"checked":""%>> With Lower Alphabit </input>
 		</td>
 	</tr>
 	<tr>
