--- a/source/public/assets/css/styles.css
+++ b/source/public/assets/css/styles.css
@@ -25,3 +25,6 @@ label{
 footer {
    position: fixed;left: 0;bottom: 0;width: 100%;background-color: white;color: black;text-align: center;font-size:5%;
 }
+input[type=checkbox] {
+  accent-color: green;
+}
