--- a/source/views/createpassword.ejs
+++ b/source/views/createpassword.ejs
@@ -12,9 +12,9 @@
 
 <body> 
 
-<img src="/source/password.jpg" style="width:128px;height:128px;">
+<img src="/public/password.jpg" style="left:0;width:100%;height:163px;">
 <h1>Welcome To M.R.S. Password Generator</h1> 
-<p>Use our online password generator to instantly create a secure, random password.</p>
+<p>Use our online password generator to instantly create a secure, random password</p>
 
 <div> 
 
@@ -33,21 +33,22 @@
 	</tr>
 	<tr>
 		<td>
-			<input type="checkbox" name = "withNumeric" <%=result.configuration.withNumeric?"checked":""%> >with Numeric</input>
+		<input type="checkbox"  name = "withNumeric" <%=result.configuration.withNumeric?"checked":""%> >With Numbers (123)</input>
+		
 		</td>
 		<td>
-			<input type="checkbox" name = "withSymbols" <%=result.configuration.withSymbols?"checked":""%> > with Symbols</input>
+			<input type="checkbox"  name = "withSymbols" <%=result.configuration.withSymbols?"checked":""%> >With Symbols(@$%)</input>
 		</td>
 		<td>
-			<input type="checkbox" name="withUpperAlphabit" <%=result.configuration.withUpperAlphabit?"checked":""%> > With Upper Alphabit </input>
+			<input type="checkbox" name="withUpperAlphabit" <%=result.configuration.withUpperAlphabit?"checked":""%> > With Uppercase(ABC) </input>
 		</td>
 		<td>
-			<input type="checkbox" name="withLowerAlphabit" <%=result.configuration.withLowerAlphabit?"checked":""%>> With Lower Alphabit </input>
+			<input type="checkbox" name="withLowerAlphabit" <%=result.configuration.withLowerAlphabit?"checked":""%>> With Lowercase(abc) </input>
 		</td>
 	</tr>
-	<tr>
+		<tr>
 		<td colspan = "4">
-			<button type="submit" class="btn btn-primary">create</button> 
+			<button type="submit" class="btn btn-primary">Create</button> 
 			<br>
 			<font color="red"><%=result.errmsg%></font>
 		</td>
@@ -56,8 +57,45 @@
 	</div> 
 </form> 
 </div> 
+<div>
+	<table style="width:100%">
+	<tr>
+		<th style="width:10%">Index </th>
+		<th style="width:10%">Password</th>
+		<th style="width:10%">Length of password</th>
+	</tr>
+	<% if(result.passwordlist.length!=0)
+	{
+		var i = 1;
+		var passwordliststring="";
+		result.passwordlist.forEach(function(data){
+		passwordliststring += data + "\\r\\n";
+		%>
+	<tr>
+		<td>
+			<%=i%>
+		</td>
+		<td>
+			<%=data%>
+		</td>
+		<td>
+			<%=data.length%>
+		</td>
+	</tr>
+		<tr>
+		<td colspan ="3"><button onclick="copyToClipboard();"> Copy to clipboard</button></td>
+	</tr>
+	<% i++;
+}) %> 
+	<% }%>	
+	</table>
+	
+</div>
+<br>
 
+<p>We are more than happy to hear from you, please click the email below for your feedback</p>
 
+<p><a href="mailto:info@mrspasswordgenerator.com">info@mrspasswordgenerator.com</a></p>
 
  <footer> Created and tested by Steven Lei, Maribeth Bondoc Estimos and Richard (Xian)Zhang <br>
           Copyright 1978-2022. All Rights Reserved.</footer> 
