--- a/source/public/assets/css/styles.css
+++ b/source/public/assets/css/styles.css
@@ -22,7 +22,7 @@ th{
 	font-size:30%;text-align:center;color:white;
 }
 label{
-	text-siztext-align:center;background-color:pink;color:purple;
+	text-siztext-align:center;background-color:pink;color:purple;font-size:20px;
 }
 footer {
    position: fixed;left: 0;bottom: 0;width: 100%;background-color: white;color: black;text-align: center;font-size:5%;
